name:                cretheus
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Julian K. Arni
maintainer:          jkarni@gmail.com
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Data.Cretheus
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , bytestring
                     , operational
                     , scientific
                     , text
  -- hs-source-dirs:
  default-language:    Haskell2010
