name:                cretheus
version:             0.1.0.0
synopsis:            Aeson with Schemas
description:
    Drop in replacement for 'aeson', with support for generating schemas.
    .
    N.B.: A lot of this code comes from Aeson, for which the license and
    copyright of course differ.
license:             BSD3
license-file:        LICENSE
author:              Julian K. Arni
maintainer:          jkarni@gmail.com
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Data.Cretheus
                     , Data.Cretheus.Types.Class
                     , Data.Cretheus.Types.Instances
                     , Data.Cretheus.Types.Internal
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , operational
                     , scientific
                     , text
                     , json-schema
                     , vector
  default-language:    Haskell2010
